
option java_outer_classname="SetTransferableKeyListCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message SetTransferableKeyListCommand 
{
	optional int64 requestId = 1;
	repeated bytes keyList = 2;
}